--- a/Saved Parameter Setups/sigen test.ini
+++ b/Saved Parameter Setups/sigen test.ini
@@ -196,7 +196,7 @@ guardBand_prechar=100e3
 iChannel_awg=None
 iChannel_vsg=-Select-
 ifCenterFreq_down=
-ifPath_vsa=255 MHz
+ifPath_vsa=-Select-
 ifSpacingField_comb=5e6
 inputPAPR_prechar=
 interleaving_dig=-Select-
@@ -464,7 +464,7 @@ p3c4PartNumber=
 p3c4Voltage=
 partNum_awg=M8190A
 partNum_dig=
-partNum_sa=" "
+partNum_sa=N9040B
 partNum_scope=
 partNum_spa=
 partNum_vsg=
@@ -657,3 +657,23 @@ vsgWorkflow_sa=0
 vsgWorkflow_vsaMeas=0
 vsgWorkflow_vsgMeas=0
 vsgWorkflows=1
+endTone_hetero=
+expansionMarginEnable_hetero=-Select-
+expansionMargin_hetero=
+freqDomainAlign_hetero=-Select-
+freqResolution_hetero=
+mirrorFlag_hetero=-Select-
+noIterations_hetero=
+noRXPeriods_hetero=
+noTXPeriods_hetero=
+paprMax_awg=
+paprMax_hetero=
+paprMin_awg=
+paprMin_hetero=
+phaseDistribution_hetero=-Select-
+realBasisFlag_hetero=-Select-
+startTone_hetero=
+toneSpacing_hetero=
+vsaCalFileEnable_hetero=-Select-
+vsgCenterFreq_hetero=
+xCorrLength_vsgMeas=
