update buttons started, signal gen bugs

--- a/Saved Parameter Setups/test.ini
+++ b/Saved Parameter Setups/test.ini
@@ -2,34 +2,29 @@
 acpBW_spa=
 acpNoiseEnable_spa=-Select-
 acpOffset_spa=
-acpScreenName_spa=
+acpScreenName_spa=Spectrum Analyzer
 acquisition_scope=
-address_awg="TCPIP0::localhost::hislip5::INSTR "
+address_awg=TCPIP0::localhost::hislip5::INSTR
 address_dig=
 address_sa=USB0::0x2A8D::0x190B::US57010129::0::INSTR
 address_scope=
 address_spa=
 address_vsg=
-advParamsStack_vsgMeas=0
+advParamsStack_vsgMeas=1
 algoNextStack=0
-alignFreqDomain_prechar=True
-ampCorrFileField_vsgMeas=
-ampCorrFile_vsgMeas=
+alignFreqDomain_prechar=Frequency
 ampCorrection_awgCal=-Select-
-ampCorrection_awgCal_2=-Select-
+ampCorrection_awgCal_2=False
 analysisBandwidth_sa=1e9
 attenuation_sa=10
 attenuation_spa=
-autoscale_scope=-Select-
 averagingEnable=False
 averaging_spa=-Select-
 avgCount_spa=
 awgCalFileField_vsgMeas=
-awgCalFileField_vsgMeas_2=
 awgCalSaveLocField_vsgMeas=
-awgCalSaveLocField_vsgMeas_2=
-awgChannel_awgCal=
-awgParamsStack_vsgMeas=0
+awgChannel_awgCal=1
+awgParamsStack_vsgMeas=2
 c1Check_dig=false
 c1Interleave_dig=-Select-
 c2Check_dig=false
@@ -60,37 +55,27 @@ calFileQField_algo_3=
 calFileQField_vsgMeas=
 calStructField_vsg=
 calStructPathField_algo=
-calStructSaveLocField_vsgMeas=
 calStructSaveLocField_vsgMeas_3=
 calValPathField_algo=
 calValPathField_algo_2=
 calValResultsStack=1
 centerFreq_awgCal=
-centerFreq_awgCal_2=
-centerFreq_prechar=1e9
-centerFreq_vsaMeas=
+centerFreq_awgCal_2=1e9
+centerFreq_vsaMeas=1e9
 centerFreq_vsaMeas_2=1e9
 clockEnabled_dig=-Select-
 clockFreq_dig=-Select-
 clockRef_sa=Internal
 clockRef_spa=-Select-
-comboBox_100=-Select-
-comboBox_101=-Select-
+comboBox=False
 comboBox_102=-Select-
 comboBox_103=Single
-comboBox_104=-Select-
-comboBox_105=-Select-
-comboBox_110=-Select-
-comboBox_111=-Select-
 comboBox_112=-Select-
 comboBox_113=-Select-
 comboBox_114=-Select-
 comboBox_116=-Select-
 comboBox_117=-Select-
 comboBox_118=-Select-
-comboBox_121=-Select-
-comboBox_122=-Select-
-comboBox_127=-Select-
 comboBox_128=-Select-
 comboBox_129=-Select-
 comboBox_130=-Select-
@@ -123,23 +108,17 @@ comboBox_159=-Select-
 comboBox_160=-Select-
 comboBox_161=-Select-
 comboBox_162=-Select-
+comboBox_2=False
+comboBox_3=-Select-
 comboBox_56=-Select-
 comboBox_57=-Select-
 comboBox_58=-Select-
 comboBox_68=-Select-
-comboBox_70=-Select-
-comboBox_72=-Select-
-comboBox_74=-Select-
-comboBox_81=5G_NR_OFDM_200MHz
-comboBox_82=True
+comboBox_81=5G_NR_OFDM_50MHz
 comboBox_84=-Select-
 comboBox_85=-Select-
 comboBox_87=Single
-comboBox_88=-Select-
-comboBox_89=-Select-
-comboBox_90=-Select-
 comboBox_96=-Select-
-comboBox_97=-Select-
 coupling_dig=-Select-
 crossCorrLength_prechar=2000
 customIField_algo=
@@ -159,7 +138,7 @@ dllFile_dig=
 dllFile_scope=
 dllFile_uxa=
 downFileField_algo=
-downFileField_algo_2=C:/Users/ybeltagy/Documents/Laura/peprs/DPD Data/Utility Data/FIR_LPF_fs20e9_fpass0r5e9_Order815.mat
+downFileField_algo_2=
 downFileField_algo_3=
 downFileField_vsgMeas=
 downFileField_vsgMeas_2=
@@ -169,11 +148,11 @@ downStack_vsaMeas=0
 dpdAlgoStack=1
 dpdMeasPathField_algo=
 driverPath_scope=
-enableExpansion_prechar=False
 endFreq_awgCal=
-endFreq_awgCal_2=
-equipStack=0
-expansionMargin_prechar=0
+endTone_hetero=
+equipStack=2
+expansionMarginEnable_hetero=-Select-
+expansionMargin_hetero=
 extClkEnabled_scope=-Select-
 extRefFreq_awg=10e6
 extRefFreq_vsg=10e6
@@ -181,18 +160,19 @@ filterTpye_vsa=Flat Top
 filterType_spa=-Select-
 frameTime_vsaMeas=
 frameTime_vsaMeas_2=
-freqMultiplierFactor_prechar=1
+freqDomainAlign_hetero=-Select-
+freqMultiplierFactor_prechar=
 freqMultiplierFlag_prechar=False
 freqResField_comb=
 freqRes_awgCal=
-freqRes_awgCal_2=
+freqResolution_hetero=
 freqSpan_spa=
 freq_sa=1e9
 freq_spa=
 gainExpansionFlag_prechar=False
-gainExpansion_prechar=0
+gainExpansion_prechar=
 generateVSACalCheck=false
-guardBand_prechar=100e3
+guardBand_prechar=500000
 iChannel_awg=None
 iChannel_vsg=-Select-
 ifCenterFreq_down=
@@ -202,9 +182,7 @@ inputPAPR_prechar=
 interleaving_dig=-Select-
 iqFileField_vsg=
 iqFileField_vsgMeas=
-iqFileField_vsgMeas_3=
 iqPathField_algo=
-iqSaveLocField_vsgMeas=
 iqSaveLocField_vsgMeas_3=
 lineEdit_100=
 lineEdit_101=
@@ -225,11 +203,6 @@ lineEdit_115=
 lineEdit_116=
 lineEdit_117=
 lineEdit_118=
-lineEdit_127=
-lineEdit_128=
-lineEdit_129=
-lineEdit_130=
-lineEdit_131=
 lineEdit_132=
 lineEdit_133=
 lineEdit_134=
@@ -243,16 +216,6 @@ lineEdit_141=
 lineEdit_142=
 lineEdit_143=
 lineEdit_144=
-lineEdit_145=
-lineEdit_146=
-lineEdit_147=
-lineEdit_148=
-lineEdit_149=
-lineEdit_150=
-lineEdit_151=
-lineEdit_152=
-lineEdit_153=
-lineEdit_154=
 lineEdit_155=
 lineEdit_156=
 lineEdit_157=
@@ -266,15 +229,7 @@ lineEdit_164=
 lineEdit_165=
 lineEdit_166=
 lineEdit_167=
-lineEdit_168=
-lineEdit_169=
 lineEdit_17=
-lineEdit_170=
-lineEdit_171=
-lineEdit_172=
-lineEdit_173=
-lineEdit_174=
-lineEdit_175=
 lineEdit_18=
 lineEdit_186=
 lineEdit_187=
@@ -292,10 +247,7 @@ lineEdit_197=
 lineEdit_198=
 lineEdit_199=
 lineEdit_20=
-lineEdit_200=
-lineEdit_201=
 lineEdit_202=
-lineEdit_203=
 lineEdit_204=
 lineEdit_205=
 lineEdit_206=
@@ -324,13 +276,8 @@ lineEdit_232=
 lineEdit_241=
 lineEdit_242=
 lineEdit_243=
-lineEdit_244=
-lineEdit_245=
-lineEdit_246=
-lineEdit_247=
-lineEdit_248=
+lineEdit_248=2000
 lineEdit_249=
-lineEdit_250=
 lineEdit_251=
 lineEdit_252=
 lineEdit_255=
@@ -341,11 +288,7 @@ lineEdit_259=
 lineEdit_260=
 lineEdit_261=
 lineEdit_263=
-lineEdit_264=
-lineEdit_265=
-lineEdit_266=
 lineEdit_267=
-lineEdit_268=
 lineEdit_269=
 lineEdit_270=
 lineEdit_271=
@@ -370,10 +313,9 @@ lineEdit_50=
 lineEdit_51=
 lineEdit_52=
 lineEdit_53=
-lineEdit_79=
+lineEdit_79=1
 lineEdit_85=
 lineEdit_86=
-lineEdit_87=2000
 lineEdit_99=
 loFreqOffsetField_comb=
 loFreq_down=
@@ -384,10 +326,11 @@ measChannel1=false
 measChannel2=false
 measChannel3=false
 measChannel4=false
-measStack=0
+measStack=1
 meterNextStack=0
 mirrorFlag_awgCal=-Select-
 mirrorFlag_down=-Select-
+mirrorFlag_hetero=-Select-
 mirrorSignal_prechar=False
 model_awg=12 Bit
 model_vsg=-Select-
@@ -395,19 +338,17 @@ mwPath_vsa=STD
 nmseDB_prechar=
 nmsePercent_prechar=
 noAveragesField_meter=
-noAveragesField_sa=
-noAveragesField_scope=
+noAveragesField_sa=1
+noAveragesField_scope=1
 noChannels_p1=-Select-
 noChannels_p2=-Select-
 noChannels_p3=-Select-
 noFrameTimes_vsaMeas=1
 noFrameTimes_vsaMeas_2=1
 noIterations_awgCal=
-noIterations_awgCal_2=
-noPeriods_prechar=1
-noRXPeriods_awgCal=
-noSegments_prechar=100
+noIterations_hetero=
 noTXPeriods_awgCal=
+noTXPeriods_awgMeas=1
 noiseExtension_spa=-Select-
 noiseOptimization_spa=-Select-
 outputPAPR_prechar=
@@ -462,14 +403,18 @@ p3c4Address=
 p3c4Current=
 p3c4PartNumber=
 p3c4Voltage=
+paprMax_awg=
+paprMax_hetero=
+paprMin_awg=
+paprMin_hetero=
 partNum_awg=M8190A
 partNum_dig=
-partNum_sa=N9040B
+partNum_sa=" "
 partNum_scope=
 partNum_spa=
 partNum_vsg=
 phaseDistr_awgCal=Schroeder
-phaseDistr_awgCal_2=Schroeder
+phaseDistribution_hetero=-Select-
 phaseNoiseOptimization_vsa=Balance Noise and Spurs
 power1NextStack=0
 power2NextStack=1
@@ -481,14 +426,14 @@ powerMeterFilter=-Select-
 powerMeterFrequency=
 powerMeterOffset=
 powerMeterPartNum=
-preampEnable_spa=-Select-
+preampEnable_spa=False
 preampEnable_vsa=False
 precharAlgoStack=1
 qChannel_awg=None
 qChannel_vsg=-Select-
 realBasisFlag_awgCal=-Select-
-realBasisFlag_awgCal_2=-Select-
-refClockSorce_awg=External Reference
+realBasisFlag_hetero=-Select-
+refClockSorce_awg=Backplane Reference
 refClockSorce_vsg=Backplane Reference
 refFileField_comb=
 refSource_dig=
@@ -502,13 +447,14 @@ rightFlowStack=0
 saEquipAdvStack=0
 saEquipStandardStack=1
 saNextStack=4
-saScrenName_spa=
+saScrenName_spa=Spectrum Analyzer
 saType=-Select-
+sampRateOverwrite_dpd=False
 sampRateOverwrite_prechar=False
 sampRate_vsaMeas=
-sampRate_vsaMeas_2=1.25e9
-sampleClockFreq_awgCal=12e9
-sampleClockFreq_awgCal_2=12e9
+sampRate_vsaMeas_2=125e6
+sampleClockFreq_awgCal=10e6
+sampleClockFreq_awgCal_2=10e6
 sampleMarker_awg=1.5
 sampleMarker_vsg=1.5
 setupFile_dig=
@@ -521,9 +467,11 @@ single_down_p2_stack=1
 single_down_p3_stack=1
 single_down_sa_stack=0
 single_down_up_stack=1
-single_down_vsaMeas_stack=0
+single_down_vsaMeas_stack=1
+single_down_vsaMeas_stack_2=0
 single_down_vsa_stack=0
-single_down_vsgMeas_stack=1
+single_down_vsgMeas_stack=0
+single_down_vsgMeas_stack_2=0
 single_down_vsg_stack=1
 single_meter_stack=2
 single_mod_down_down_stack=1
@@ -536,19 +484,21 @@ single_mod_down_up_stack=0
 single_mod_down_vsa_stack=0
 single_mod_down_vsg_stack=0
 single_mod_meter_stack=2
-single_mod_p1_stack=2
+single_mod_p1_stack=1
 single_mod_p2_stack=2
 single_mod_sa_stack=2
-single_mod_up_stack=2
-single_mod_vsa_stack=2
-single_mod_vsg_stack=2
+single_mod_up_stack=3
+single_mod_vsa_stack=0
+single_mod_vsg_stack=0
 single_p1_stack=2
 single_p2_stack=2
 single_sa_stack=2
 single_up_stack=2
 single_vsaMeas_stack=2
+single_vsaMeas_stack_2=2
 single_vsa_stack=2
 single_vsgMeas_stack=2
+single_vsgMeas_stack_2=2
 single_vsg_stack=2
 smoothFlagField_comb=-Select-
 smoothOrderField_comb=
@@ -556,39 +506,38 @@ spurEndField_comb=
 spurSpacingField_comb=
 spurStartField_comb=
 startFreq_awgCal=
-startFreq_awgCal_2=
+startTone_hetero=
+subRate_dpd=False
 subRate_prechar=False
 subrateField_comb=False
-subtractDC_prechar=False
-subtractMean_prechar=False
 syncMarker_awg=1.2
 syncMarker_vsg=1.2
 toneSpacing_awgCal=
-toneSpacing_awgCal_2=
+toneSpacing_hetero=
 traceAvg_spa=-Select-
-traceNum_spa=
+traceNum_spa=1
 trigAmp_awgCal=
-trigAmp_awgCal_2=
+trigAmp_awgCal_2=1.5
 trigAmp_down=
 trigChannel_scope=3
-trigLevel_dig=
+trigLevel_dig=0.7
 trigLevel_sa=0.7
 trigLevel_spa=
 trigMode_awg=Continuous
 trigMode_vsg=Continuous
 trigSource_dig=-Select-
-trigSource_sa=External 3
+trigSource_sa=External 1
 trigSource_spa=-Select-
 upCalFileField_vsgMeas=
-upCalFileField_vsgMeas_2=
 upCalSaveLocField_vsgMeas=
-upParamsStack_vsgMeas=0
-upSaveLocField_vsgMeas=
-up_psg_next=3
+upParamsStack_vsgMeas=1
+up_psg_next=5
 up_psg_stack=0
 up_psg_stack_p2=0
 up_psg_workflow=0
 useVSACal_awgCal=-Select-
+useVSACal_prechar=False
+useVSGCal_prechar=False
 uxa_pxa_set=0
 uxa_pxa_titleStack=0
 uxa_pxa_titleStackAdv=0
@@ -597,6 +546,7 @@ vfs_awgCal_2=0.7
 vfs_dig=
 vsaAdvancedStack=2
 vsaCalFielField_vsgMeas=
+vsaCalFileEnable_hetero=-Select-
 vsaCalFileField_algo=
 vsaCalFileField_algo_2=
 vsaCalFileField_algo_3=
@@ -610,9 +560,9 @@ vsaCalResultsStack_algo=0
 vsaCalSaveLocField_comb=
 vsaEquipStack=0
 vsaMeasGenStack=0
-vsaMeasNextStack=1
+vsaMeasNextStack=5
 vsaMeasRunStack=1
-vsaNextStack=1
+vsaNextStack=3
 vsaResultsStack_vsaMeas=1
 vsaResultsStack_vsgMeas=1
 vsaType=UXA
@@ -634,16 +584,17 @@ vsgCalPathField_algo=
 vsgCalPath_algo=
 vsgCalPaths_algo=1
 vsgCalResults_algo=0
-vsgCalSaveLocField_vsgMeas=
 vsgCalSaveLocField_vsgMeas_3=
-vsgCalType=-Select-
+vsgCalType=None
+vsgChannel_hetero=1
+vsgChannel_homo=1
 vsgEquipStack=0
 vsgEquipStackAdv=0
 vsgFileField_vsg=
-vsgFrameTime_vsaMeas=-Select-
+vsgFrameTime_vsaMeas=True
 vsgFrameTime_vsaMeas_2=True
-vsgMeasNextStack=7
-vsgNextSteps=5
+vsgMeasNextStack=5
+vsgNextSteps=7
 vsgNoChannels=1
 vsgResultsFileStack_vsgMeas=1
 vsgResultsStack_vsgMeas=1
@@ -657,23 +608,7 @@ vsgWorkflow_sa=0
 vsgWorkflow_vsaMeas=0
 vsgWorkflow_vsgMeas=0
 vsgWorkflows=1
-endTone_hetero=
-expansionMarginEnable_hetero=-Select-
-expansionMargin_hetero=
-freqDomainAlign_hetero=-Select-
-freqResolution_hetero=
-mirrorFlag_hetero=-Select-
-noIterations_hetero=
-noRXPeriods_hetero=
-noTXPeriods_hetero=
-paprMax_awg=
-paprMax_hetero=
-paprMin_awg=
-paprMin_hetero=
-phaseDistribution_hetero=-Select-
-realBasisFlag_hetero=-Select-
-startTone_hetero=
-toneSpacing_hetero=
-vsaCalFileEnable_hetero=-Select-
-vsgCenterFreq_hetero=
-xCorrLength_vsgMeas=
+xCorrLength_vsgMeas=2000
+noSegments_calval=
+noSegments_dpd=
+noSegments_prechar=200
