update buttons tested

--- a/Saved Parameter Setups/easynav.ini
+++ b/Saved Parameter Setups/easynav.ini
@@ -3,18 +3,18 @@ acpBW_spa=
 acpNoiseEnable_spa=-Select-
 acpOffset_spa=
 acpScreenName_spa=Spectrum Analyzer
-acquisition_scope=
+acquisition_scope=q
 activationIteration_dpd=
-address_awg=
+address_awg="TCPIP0::localhost::hislip5::INSTR "
 address_dig=
-address_down=
+address_down=q
 address_psg=
 address_sa=
-address_scope=
+address_scope=q
 address_spa=
-address_up=
+address_up=1
 address_vsg=test
-advParamsStack_vsgMeas=2
+advParamsStack_vsgMeas=0
 algoNextStack=1
 alignFreqDomain_prechar=Frequency
 ampCorrection_awgCal=False
@@ -22,12 +22,12 @@ ampCorrection_awgCal_2=False
 analysisBandwidth_sa=
 attenuation_sa=
 attenuation_spa=
-averagingEnable=-Select-
+averagingEnable=False
 averaging_spa=-Select-
 avgCount_spa=
 awgCalSaveLocField_vsgMeas=C:/Users/leing/Documents/Laura/git/peprs/Measurement Data/AWG_CalResults/test.txt
 awgChannel_awgCal=1
-awgParamsStack_vsgMeas=2
+awgParamsStack_vsgMeas=0
 bitsPerEntry_dpd=
 c1Check_dig=false
 c1Interleave_dig=-Select-
@@ -88,7 +88,7 @@ dataFile_uxa=
 debugAlgoStack=0
 debugVSAStack=0
 debugVSGStack=0
-demodulationEnable=-Select-
+demodulationEnable=False
 despurFlagField_comb=False
 despurFlag_dpd=-Select-
 detector_spa=-Select-
@@ -101,24 +101,24 @@ downFileField_algo_3=
 downFileField_vsgMeas=C:/Users/leing/Documents/Laura/git/peprs/Measurement Data/Utility_Data/TX Calibration/FIR_LPF_fs20e9_fpass0r5e9_Order318.mat
 downFileField_vsgMeas_2=
 downFilterFileField_vsgMeas=C:/Users/leing/Documents/Laura/git/peprs/Measurement Data/Utility_Data/TX Calibration/FIR_LPF_fs1r25e9_fpass0r49e9_Order416.mat
-downNextStack=0
+downNextStack=3
 downStack_vsaMeas=1
 dpdAlgoStack=1
 dpdMeasPathField_algo=
-driverPath_scope=
+driverPath_scope=C:/Users/ybeltagy/Documents/Laura/peprs/Equipment Setup/Scope/AgilentInfiniium.mdd
 endFreq_awgCal=-5e6
 endToneI_homo=
 endToneQ_homo=
 endTone_hetero=-5e9
 engine_dpd=-Select-
-equipStack=0
+equipStack=6
 expansionEnable_homo=-Select-
 expansionMarginEnable_dpd=-Select-
 expansionMarginEnable_hetero=False
 expansionMargin_dpd=
 expansionMargin_hetero=
 expansionMargin_homo=
-extClkEnabled_scope=-Select-
+extClkEnabled_scope=True
 extRefFreq_awg=10e6
 extRefFreq_vsg=10e6
 filterBasisFlag_dpd=-Select-
@@ -152,7 +152,7 @@ guardBand_calval=50000
 guardBand_dpd=
 guardBand_homo=
 guardBand_prechar=50000
-iChannel_awg=-Select-
+iChannel_awg=None
 iChannel_vsg=None
 iOffset_freq=
 ifCenterFreq_down=5e6
@@ -234,7 +234,7 @@ maxLoFreq_homo=
 maxRFFreq_hetero=
 maxRFFreq_homo=
 maxRFFreq_upMeas=
-maxSampleRate_awg=
+maxSampleRate_awg=12e9
 maxSampleRate_vsg=
 measChannel1=false
 measChannel2=false
@@ -244,7 +244,7 @@ measStack=1
 memoryDepth_dpd=
 memoryStep_dpd=
 memoryTruncation_dpd=-Select-
-meterNextStack=0
+meterNextStack=2
 minIFFreq_hetero=
 minIFFreq_homo=
 minIFFreq_upMeas=
@@ -264,7 +264,7 @@ mirrorSignal_prechar=False
 modelParam1_dpd=
 modelParam2_dpd=
 modelType_dpd=-Select-
-model_awg=-Select-
+model_awg=12 Bit
 model_vsg=12 bit
 mwPath_vsa=STD
 negFreqEnd_down=
@@ -355,7 +355,7 @@ paprMin_awg=1
 paprMin_hetero=1
 paprMin_homo=
 parameterMethod_dpd=-Select-
-partNum_awg=
+partNum_awg=M8190A
 partNum_dig=
 partNum_down=
 partNum_psg=
@@ -382,12 +382,12 @@ powerMeterFilter=-Select-
 powerMeterFrequency=
 powerMeterOffset=
 powerMeterPartNum=
-power_down=
-power_up=
+power_down=q
+power_up=1
 preampEnable_spa=False
 preampEnable_vsa=False
 precharAlgoStack=1
-qChannel_awg=-Select-
+qChannel_awg=None
 qChannel_vsg=None
 qOffset_homo=
 realBasisFlag_awgCal=False
@@ -413,11 +413,11 @@ rfUnderstep_homo=
 rfUnderstep_upMeas=
 rightFlowStack=0
 rootOrder_dpd=
-saEquipAdvStack=0
-saEquipStandardStack=1
-saNextStack=4
+saEquipAdvStack=2
+saEquipStandardStack=2
+saNextStack=0
 saScrenName_spa=Spectrum Analyzer
-saType=-Select-
+saType=None
 sampRateOverwrite_calval=False
 sampRateOverwrite_dpd=False
 sampRateOverwrite_prechar=False
@@ -457,27 +457,27 @@ single_mod_down_sa_stack=1
 single_mod_down_up_stack=0
 single_mod_down_vsa_stack=0
 single_mod_down_vsg_stack=0
-single_mod_meter_stack=2
-single_mod_p1_stack=1
-single_mod_p2_stack=2
-single_mod_sa_stack=2
-single_mod_up_stack=3
+single_mod_meter_stack=0
+single_mod_p1_stack=0
+single_mod_p2_stack=0
+single_mod_sa_stack=0
+single_mod_up_stack=0
 single_mod_vsa_stack=0
 single_mod_vsg_stack=0
-single_p1_stack=2
-single_p2_stack=1
-single_sa_stack=2
-single_up_stack=2
+single_p1_stack=0
+single_p2_stack=0
+single_sa_stack=0
+single_up_stack=0
 single_vsaMeas_stack=0
-single_vsaMeas_stack_2=3
-single_vsa_stack=2
+single_vsaMeas_stack_2=0
+single_vsa_stack=0
 single_vsgMeas_stack=0
-single_vsgMeas_stack_2=3
+single_vsgMeas_stack_2=0
 single_vsg_stack=0
 smoothFlagField_comb=False
 smoothOrderField_comb=0
-source_down=-Select-
-source_up=-Select-
+source_down=MXG
+source_up=MXG
 spurEndField_comb=0
 spurSpacingField_comb=0
 spurStartField_comb=0
@@ -520,9 +520,9 @@ twoStepID_dpd=
 type_homo=-Select-
 uniformSpacing_homo=-Select-
 upCalSaveLocField_vsgMeas=C:/Users/leing/Documents/Laura/git/peprs/Measurement Data/Upconverter_CalResults/tasdefs.mat
-upParamsStack_vsgMeas=2
-up_psg_next=0
-up_psg_stack=1
+upParamsStack_vsgMeas=0
+up_psg_next=7
+up_psg_stack=0
 up_psg_stack_p2=0
 up_psg_workflow=0
 useAWGCal_homo=-Select-
@@ -560,7 +560,7 @@ vsaEquipStack=1
 vsaMeasGenStack=0
 vsaMeasNextStack=1
 vsaMeasRunStack=0
-vsaNextStack=0
+vsaNextStack=5
 vsaResultsStack_vsaMeas=0
 vsaResultsStack_vsgMeas=0
 vsaType=Scope & Downconverter
@@ -583,7 +583,7 @@ vsgCalPath_algo=
 vsgCalPaths_algo=1
 vsgCalResults_algo=0
 vsgCalSaveLocField_vsgMeas_3=
-vsgCalType=Heterodyne
+vsgCalType=-Select-
 vsgChannel_hetero=1
 vsgChannel_homo=1
 vsgEquipStack=0
@@ -592,7 +592,7 @@ vsgFileField_vsg=
 vsgFrameTime_vsaMeas=True
 vsgFrameTime_vsaMeas_2=True
 vsgMeasNextStack=8
-vsgNextSteps=1
+vsgNextSteps=9
 vsgNoChannels=1
 vsgResultsFileStack_vsgMeas=1
 vsgResultsStack_vsgMeas=0
